--- a/src/style.scss
+++ b/src/style.scss
@@ -74,6 +74,10 @@ body {
     background-color: transparent;
     border: none;
     cursor: pointer;
+
+    &:hover {
+        opacity: 0.6;
+    }
 }
 
 .img {
@@ -252,6 +256,27 @@ body {
     grid-template-columns: repeat(2, 1fr);
 }
 
+.catalog__sort-item {
+    padding-right: 7px;
+}
+
+.catalog__sort-item::after {
+    content: '';
+    border: solid black;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+
+    position: relative;
+    top: -3px;
+    left: 5px;
+
+    width: 5px;
+    height: 5px;
+
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
 .heading-main {
     font-family: 'Dela Gothic One', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: normal;
@@ -404,18 +429,20 @@ body {
         opacity: 0.6;
     }
 
-    &:hover::after {
+    &:hover:after {
         animation-name: spin;
         animation-duration: 1s;
         animation-iteration-count: infinite;
         animation-timing-function: linear;
     }
 
-    @keyframes spin { 
-        from { 
-            transform: rotate(0deg); 
-        } to { 
-            transform: rotate(360deg); 
+    @keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+
+        to {
+            transform: rotate(360deg);
         }
     }
 }
@@ -438,8 +465,8 @@ body {
 
 .footer__scroll {
     position: absolute;
-    top: -15px;
-    
+    top: -18px;
+    width: 16px;
 
 }
 
@@ -538,7 +565,7 @@ body {
 
 
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 660px) {
     .footer__social {
         order: 3;
     }
@@ -557,7 +584,7 @@ body {
 
     .wrapper {
         width: 88.89%;
-        margin: 0 auto;
+        margin: 0px auto;
     }
 
     .desktop {
@@ -609,25 +636,37 @@ body {
         grid-template-rows: 1fr;
         column-gap: 20px;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
 
-    .catalog__content-wrapper {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-    }
 
-    .catalog__title {
-        padding-bottom: 45px;
-        padding-top: 0px;
+        &__list {
+            display: grid;
+            gap: 50px;
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        &__content-wrapper {
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+        }
+
+        &__title {
+            padding-bottom: 45px;
+            padding-top: 0px;
+        }
+
+        &__content {
+            grid-area: cat-content;
+        }
+
+        &__button_reload {
+            align-self: center;
+            margin: 65px auto 130px auto;
+        }
     }
 
     .filters-desktop {
         grid-area: filters;
-    }
-
-    .catalog__content {
-        grid-area: cat-content;
     }
 
     .heading-main {
@@ -659,9 +698,19 @@ body {
         margin-top: 10px;
     }
 
+
     .wrapper_footer {
         row-gap: 40px;
         padding: 70px 0;
+
+    }
+
+    .footer__scroll {
+        position: absolute;
+        top: -38px;
+        width: 30px;
+        height: 56px;
+
 
     }
 
